Up date function

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
     </section>
 
-<hr>
+    <hr>
     <div id="versus">vs</div>
-<hr>
+    <hr>
 
     <div id="computador">
         <h3 class="computador"> Computador </h3> <span id="computador-pontos">0</span>
@@ -56,19 +56,21 @@
 
     </div>
 
-    <div>
+    <!-- <div>
         <h3 id="placar"></h3>
+    </div>
+-->
+
+    <div id="placar">
+
     </div>
 
 
 
-    <div id="mensagem">Resultado: </div>
-
-
-
-
-
-
 </body>
+
+<footer>
+    Fabio Gomes 2022
+</footer>
 
 </html>
