Up date functions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <header class="header">
-        <h1>Pedra, Papel e Tesoura (Jankenpon)</h1>
+        <h1>Pedra, Papel e Tesoura (Jokenpô)</h1>
     </header>
     <hr>
 
@@ -46,7 +46,9 @@
     </section>
 
     <hr>
-    <div id="versus">vs</div>
+    <div id="versus">vs
+
+    </div>
     <hr>
 
     <div id="computador">
