Check melhor de 5 rodadas

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                 <img src="./assets/Tesoura.png" alt="Tesoura" />
                 <input type="radio" name="grupo" id="tesoura">Tesoura
             </div>
+            
             <div class="button">
-                <input type="button" value="JOGAR" onclick="jogar()" />
+                <input type="button" value="JOGAR" id=jogar onclick="jogar()" />
                 <input type="button" value="RESET" id="reset" onclick="reset()" />
             </div>
 
