--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 
         <div id="resultado">
             <h1>Fim de Jogo - Resultado</h1>
-            <p>O numero de Jogadas: <span id="numeroJogadas"></span>;</p>
-            <p>Pontuacao do Jogador: <span id="resultadoJogador"></span> pontos;</p>
-            <p>Pontuacao do Computador: <span id="resultadoComputador"> pontos;</p>
-            <p>Numero de Empates: <span id="resultadoEmpate"></span> ;</p>
+            <p>O numero de Jogadas: <span id="numeroJogadas"></span> </p>
+            <p>Pontuacao do Jogador: <span id="resultadoJogador"></span> pontos</p>
+            <p>Pontuacao do Computador: <span id="resultadoComputador"> pontos</p>
+            <p>Numero de Empates: <span id="resultadoEmpate"></span> </p>
             <h2>O Ganhador foi <span id="resultadoGanhador"></span></h2>
             <input type="button" value="Jogar Novamente" id="jogarNovamente" onclick="jogarnovamente()" />
 
