--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </body>
 
 <footer>
-    <p class="rodape">Made by Fabio Gomes 2022</p>
+    <p class="rodape">Fabio Gomes © 2022</p>
     <a href="https://github.com/fabiolpgomes">GitHub</a>
     <a href="https://www.linkedin.com/in/fabiolpgomes/">Linkedin</a>
 </footer>
